--- a/index.html
+++ b/index.html
@@ -40,11 +40,18 @@
         <button @click="attackMonster">ATTACK</button>
         <button :disabled="mayUseSpecialAttack" @click="specialAttackMonster">SPECIAL ATTACK</button>
         <button @click="healPlayer">HEAL</button>
-        <button>SURRENDER</button>
+        <button @click="surrender">SURRENDER</button>
       </section>
       <section id="log" class="container">
         <h2>Battle Log</h2>
-        <ul></ul>
+        <ul>
+          <li v-for="logMessage in logMessages">
+            <span :class="{'log--player': logMessage.actionBy === 'player', 'log--monster': logMessage.actionBy === 'monster'}"> {{ logMessage.actionBy === 'player' ? 'Player' : 'Monster' }} </span>
+            <span v-if="logMessage.actionType === 'heal'"> heals herself for <span class="log--heal"> {{ logMessage.actionValue }} </span> </span>
+            <span v-else-if="logMessage.actionType === 'attack'"> attacks and deals <span class="log--damage"> {{ logMessage.actionValue }} </span> </span>
+            <span v-else> special attacks and deals <span class="log--damage"> {{ logMessage.actionValue }} </span> </span>
+          </li>
+        </ul>
       </section>
     </div>
   </body>
